--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -6,92 +6,124 @@
  *
  */
 
-table tbody tr a, .pointer {
-    cursor: pointer;
+table tbody tr a,
+.pointer {
+  cursor: pointer;
 }
 
 .widget p a {
-    cursor: help;
+  cursor: help;
 }
 
 .monospace {
-	font-family:monospace;
+  font-family: monospace;
 }
 
 .nocaps {
-    text-transform: none !important;
+  text-transform: none !important;
 }
 
 #sidebar #nav > ul > li > a {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 button.control_centering {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 /* Console Styles */
 .row-fluid .console {
-    margin-bottom: -1px;
-    border-bottom: none;
-    box-shadow: none;
+  margin-bottom: -1px;
+  border-bottom: none;
+  box-shadow: none;
 }
 
 .console-inner {
-    height: 65vh;
-    overflow-y: scroll;
-    font-family:monospace;
-    color: #FFFFFF;
-    background-color: #000000;
+  height: 65vh;
+  overflow-y: scroll;
+  font-family: monospace;
+  color: #ffffff;
+  background-color: #000000;
 }
 
 .console-inner .table td {
-    border-top: none;
-    padding: 0;
-    line-height: 1.25;
+  border-top: none;
+  padding: 0;
+  line-height: 1.25;
 }
 
 .console-input {
-    border-color: #555;
-    border: 1px solid;
-    border-top: none;
-    background-color: #000000;
+  border: 1px solid #555;
+  border-top-style: none;
+  background-color: #000000;
 }
 
 .console-input label {
-    position: absolute;
-    padding: .45em .6em;
-    background-color: #000000;
-    color: #FFFFFF;
-    text-align: right;
+  position: absolute;
+  padding: 0.45em 0.6em;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: right;
 }
 
 .console-input > input[class*="span"] {
-    border: none;
-    background-color: #000000;
-    color: #FFFFFF;
-    box-shadow: none;
-    margin-bottom: 0;
-    padding-left: 2em;
-    border-radius: 0px;
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
+  border: none;
+  background-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  margin-bottom: 0;
+  padding-left: 2em;
+  border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
 }
 
 /* Minecraft Colors                 MC Code   ANSI Code   Other Codes */
-.black        { color: #000000 } /*       0          30               */
-.dark_blue    { color: #0000AA } /*       1          34               */
-.dark_green   { color: #00AA00 } /*       2          32               */
-.dark_aqua    { color: #00AAAA } /*       3          36               */
-.dark_red     { color: #AA0000 } /*       4          31               */
-.dark_purple  { color: #AA00AA } /*       5          35               */
-.gold         { color: #FFAA00 } /*       6          33               */
-.gray         { color: #AAAAAA } /*       7          37               */
-.dark_gray    { color: #555555 } /*       8          30   1 - intense */
-.blue         { color: #5555FF } /*       9          34   1 - intense */
-.green        { color: #55FF55 } /*       a          32   1 - intense */
-.aqua         { color: #55FFFF } /*       b          36   1 - intense */
-.red          { color: #FF5555 } /*       c          31   1 - intense */
-.light_purple { color: #FF55FF } /*       d          35   1 - intense */
-.yellow       { color: #FFFF55 } /*       e          33   1 - intense */
-.white        { color: #FFFFFF } /*       f          37   1 - intense */
+.black {
+  color: #000000;
+} /*       0          30               */
+.dark_blue {
+  color: #0000aa;
+} /*       1          34               */
+.dark_green {
+  color: #00aa00;
+} /*       2          32               */
+.dark_aqua {
+  color: #00aaaa;
+} /*       3          36               */
+.dark_red {
+  color: #aa0000;
+} /*       4          31               */
+.dark_purple {
+  color: #aa00aa;
+} /*       5          35               */
+.gold {
+  color: #ffaa00;
+} /*       6          33               */
+.gray {
+  color: #aaaaaa;
+} /*       7          37               */
+.dark_gray {
+  color: #555555;
+} /*       8          30   1 - intense */
+.blue {
+  color: #5555ff;
+} /*       9          34   1 - intense */
+.green {
+  color: #55ff55;
+} /*       a          32   1 - intense */
+.aqua {
+  color: #55ffff;
+} /*       b          36   1 - intense */
+.red {
+  color: #ff5555;
+} /*       c          31   1 - intense */
+.light_purple {
+  color: #ff55ff;
+} /*       d          35   1 - intense */
+.yellow {
+  color: #ffff55;
+} /*       e          33   1 - intense */
+.white {
+  color: #ffffff;
+} /*       f          37   1 - intense */
