--- a/html/css/icons/fontawesome/font-awesome.css
+++ b/html/css/icons/fontawesome/font-awesome.css
@@ -26,9 +26,12 @@
 /* FONT PATH
  * -------------------------- */
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('fonts/fontawesome-webfont.eot?v=3.2.1');
-  src: url('fonts/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('fonts/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('fonts/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
+  font-family: "FontAwesome";
+  src: url("fonts/fontawesome-webfont.eot?v=3.2.1");
+  src: url("fonts/fontawesome-webfont.eot?#iefix&v=3.2.1") format("embedded-opentype"),
+    url("fonts/fontawesome-webfont.woff?v=3.2.1") format("woff"),
+    url("fonts/fontawesome-webfont.ttf?v=3.2.1") format("truetype"),
+    url("fonts/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -41,7 +44,7 @@
   font-style: normal;
   text-decoration: inherit;
   -webkit-font-smoothing: antialiased;
-  *margin-right: .3em;
+  *margin-right: 0.3em;
 }
 [class^="icone-"]:before,
 [class*=" icone-"]:before {
@@ -100,7 +103,7 @@ a [class*=" icone-"] {
 }
 .icone-border {
   border: solid 1px #eeeeee;
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -149,11 +152,11 @@ a [class*=" icone-"] {
 }
 [class^="icone-"].pull-left,
 [class*=" icone-"].pull-left {
-  margin-right: .3em;
+  margin-right: 0.3em;
 }
 [class^="icone-"].pull-right,
 [class*=" icone-"].pull-right {
-  margin-left: .3em;
+  margin-left: 0.3em;
 }
 /* BOOTSTRAP SPECIFIC CLASSES
  * -------------------------- */
@@ -191,7 +194,7 @@ a [class*=" icone-"] {
 .nav [class^="icone-"].icone-large,
 .btn [class*=" icone-"].icone-large,
 .nav [class*=" icone-"].icone-large {
-  line-height: .9em;
+  line-height: 0.9em;
 }
 .btn [class^="icone-"].icone-spin,
 .nav [class^="icone-"].icone-spin,
@@ -207,23 +210,23 @@ a [class*=" icone-"] {
 .nav-pills [class^="icone-"].icone-large,
 .nav-tabs [class*=" icone-"].icone-large,
 .nav-pills [class*=" icone-"].icone-large {
-  line-height: .9em;
+  line-height: 0.9em;
 }
 .btn [class^="icone-"].pull-left.icone-2x,
 .btn [class*=" icone-"].pull-left.icone-2x,
 .btn [class^="icone-"].pull-right.icone-2x,
 .btn [class*=" icone-"].pull-right.icone-2x {
-  margin-top: .18em;
+  margin-top: 0.18em;
 }
 .btn [class^="icone-"].icone-spin.icone-large,
 .btn [class*=" icone-"].icone-spin.icone-large {
-  line-height: .8em;
+  line-height: 0.8em;
 }
 .btn.btn-small [class^="icone-"].pull-left.icone-2x,
 .btn.btn-small [class*=" icone-"].pull-left.icone-2x,
 .btn.btn-small [class^="icone-"].pull-right.icone-2x,
 .btn.btn-small [class*=" icone-"].pull-right.icone-2x {
-  margin-top: .25em;
+  margin-top: 0.25em;
 }
 .btn.btn-large [class^="icone-"],
 .btn.btn-large [class*=" icone-"] {
@@ -233,15 +236,15 @@ a [class*=" icone-"] {
 .btn.btn-large [class*=" icone-"].pull-left.icone-2x,
 .btn.btn-large [class^="icone-"].pull-right.icone-2x,
 .btn.btn-large [class*=" icone-"].pull-right.icone-2x {
-  margin-top: .05em;
+  margin-top: 0.05em;
 }
 .btn.btn-large [class^="icone-"].pull-left.icone-2x,
 .btn.btn-large [class*=" icone-"].pull-left.icone-2x {
-  margin-right: .2em;
+  margin-right: 0.2em;
 }
 .btn.btn-large [class^="icone-"].pull-right.icone-2x,
 .btn.btn-large [class*=" icone-"].pull-right.icone-2x {
-  margin-left: .2em;
+  margin-left: 0.2em;
 }
 /* Fixes alignment in nav lists */
 .nav-list [class^="icone-"],
